// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectObjectives renders correctly when both objectives and caveats have length is > 850 characters and are in multiple paragraphs 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-11"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
      >
        Objectives
      </h3>
      <div
        class="MuiBox-root MuiBox-root-12"
      >
        <button
          aria-label="Edit Project Objectives"
          class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
          data-testid="h3-button-toolbar-Edit"
          id="h3-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Objectives"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-13"
    >
      <div
        class="MuiBox-root MuiBox-root-14"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Cras dapibus. Vivamus elementum
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           nisi.
        </p>
        <div
          class="MuiBox-root MuiBox-root-15"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Read More
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-16"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Cras dapibus. Vivamus elementum
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           nisi.
        </p>
        <div
          class="MuiBox-root MuiBox-root-17"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Read More
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives and caveats are < 850 characters and in multiple paragraphs 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-18"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
      >
        Objectives
      </h3>
      <div
        class="MuiBox-root MuiBox-root-19"
      >
        <button
          aria-label="Edit Project Objectives"
          class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
          data-testid="h3-button-toolbar-Edit"
          id="h3-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Objectives"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-20"
    >
      <div
        class="MuiBox-root MuiBox-root-21"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph1
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph2
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph3
        </p>
      </div>
      <div
        class="MuiBox-root MuiBox-root-22"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph1
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph2
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Paragraph3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives length is <= 850 characters 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
      >
        Objectives
      </h3>
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <button
          aria-label="Edit Project Objectives"
          class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
          data-testid="h3-button-toolbar-Edit"
          id="h3-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Objectives"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div
        class="MuiBox-root MuiBox-root-4"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Et ad et in culpa si
        </p>
      </div>
      <div
        class="MuiBox-root MuiBox-root-5"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          sjwer bds
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives length is > 850 characters and caveats is empty 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-6"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
      >
        Objectives
      </h3>
      <div
        class="MuiBox-root MuiBox-root-7"
      >
        <button
          aria-label="Edit Project Objectives"
          class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
          data-testid="h3-button-toolbar-Edit"
          id="h3-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Objectives"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-8"
    >
      <div
        class="MuiBox-root MuiBox-root-9"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Cras dapibus. Vivamus elementum
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
        </p>
        <p />
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
           nisi.
        </p>
        <div
          class="MuiBox-root MuiBox-root-10"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Read More
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
